[tool.poetry]
name = "flacue"
version = "0.1.0"
description = "Lossless audio file spliter using cue file."
authors = ["nirvikalpa samadhi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffcuesplitter = "^1.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
