[tool.poetry]
name = "flacue"
version = "0.1.2"
description = "Split FLAC file using CUE file."
authors = ["nirvikalpa samadhi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffcuesplitter = "^1.0.25"

[tool.poetry.scripts]
flacue = "flacue.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
